Made some changes in show.html.erb(replaced some routes with method name)

--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -59,7 +59,7 @@
     </td>
 
     <td>
-      <a href="/movies/<%= a_movie.id %>">
+      <a href="/movies/<%= a_movie.id %>">----to be deleted
       <a href="<%= movie_path(a_movie.id)%>">
 
         Show details
