--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -6,7 +6,9 @@
 
     <div>
       <div>
-        <a href="/movies">
+        <a href="/movies">-------to be deleted
+        <a href="<%= movies_path %>">
+
           Go back
         </a>
       </div>
