--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -6,21 +6,20 @@
 
     <div>
       <div>
-        <a href="/movies">-------to be deleted
-        <a href="<%= movies_path %>">
+        <a href="<%= movie_path %>">
 
           Go back
         </a>
       </div>
 
       <div>
-        <a href="/movies/<%= @the_movie.id %>/edit">
+        <a href="<%= edit_movie_path(@the_movie.id)%>">
           Edit movie
         </a>
       </div>
 
       <div>
-        <a href="/movies/<%= @the_movie.id %>" data-turbo-method="delete">
+        <a href="<%= movie_path(@the_movie.id) %>" data-turbo-method="delete">
           Delete movie
         </a>
       </div>
