--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -59,10 +59,7 @@
     </td>
 
     <td>
-      <a href="<%= movie_path(a_movie.id)%>">
-
-        Show details
-      </a>
+      <% = link_to "Show details", movie_path(a_movie.id) %>
     </td>
   </tr>
   <% end %>
