In controller, changed the .all, .where, matching etc stuff with a single statement

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -6,10 +6,9 @@
 
     <div>
       <div>
-        <a href="<%= movie_path %>">
 
-          Go back
-        </a>
+      <%= link_to "Go back", movie_path%>
+       
       </div>
 
       <div>
