--- a/app/views/movies/new.html.erb
+++ b/app/views/movies/new.html.erb
@@ -9,12 +9,12 @@
   <div>
     <%= label_tag :title_box, "Title" %>
 
-    <%= text_field_tag :query_title, @the_movie.title, id: "title_box" %>
+    <%= text_field_tag :movie[query_title], @the_movie.title, id: "title_box" %>
   </div>
 
   <div>
   <%= label_tag :description_box, "Description" %>
-  <%= text_area_tag :query_description, @the_movie.description, id: "description_box", rows: 3 %>
+  <%= text_area_tag :movie[query_description], @the_movie.description, id: "description_box", rows: 3 %>
   </div>
 
   <%= button_tag "Create movie" %>
