--- a/app/views/movies/new.html.erb
+++ b/app/views/movies/new.html.erb
@@ -4,18 +4,18 @@
   <p style="color: red;"><%= message %></p>
 <% end %>
 
-<%= form_with(url: movies_path, data: { turbo: false }) do %>
+<%= form_with(model: @movie, data: { turbo: false }) do |form| %>
 
   <div>
-    <%= label_tag :title_box, "Title" %>
+    <%= form.label :title %>
 
-    <%= text_field_tag :movie[query_title], @the_movie.title, id: "title_box" %>
+    <%= form.text_field :title %>
   </div>
 
   <div>
-  <%= label_tag :description_box, "Description" %>
-  <%= text_area_tag :movie[query_description], @the_movie.description, id: "description_box", rows: 3 %>
+  <%= form.label :description %>
+  <%= form.text_area :description, {rows: 3} %>
   </div>
 
-  <%= button_tag "Create movie" %>
+  <%= form.button"Create movie" %>
 <% end %>
